--- a/src/first.html
+++ b/src/first.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="device-width", initial-scale="1.0">
+  <meta name="viewport" content="device-width" initial-scale="1.0">
   <title>Main Page</title>
   <link href="first.css" rel="stylesheet">
 </head>
