--- a/src/main.html
+++ b/src/main.html
@@ -7,10 +7,17 @@
   <title>Main Page</title>
 </head>
 <body>
-    <h1>Meaterick's server</h1>
-    <form action="/submit" method="post" id="form">
-        <input type="password" name="pwd">
-        <button type="submit">LOGIN</button>
-    </form>
+  <h1>Login</h1>
+  <form action="/submit" method="post" id="form">
+    <div calss="form_layout">
+    	<p>id</p>
+    	<input type="text" name="id">
+    </div>
+    <div calss="form_layout">
+    	<p>password</p>
+    	<input type="password" name="pwd">
+    </div>
+    <button type="submit">LOGIN</button>
+  </form>
 </body>
 </html>
