--- a/src/login.html
+++ b/src/login.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <h1>Login</h1>
-  <form action="/submit" method="post" id="form">
+  <form action="/login" method="post" id="form">
     <div calss="form_layout">
     	<p>id</p>
     	<input type="text" name="id">
