--- a/src/sign_up.html
+++ b/src/sign_up.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>English test</title>
+</head>
+<body>
+  <form action="/signup" method="post" id="form">
+    <div>
+      <p>setting your id</p>
+      <input type="text" name="id">
+    </div>
+    <div>
+      <p>setting your password</p>
+      <input type="password" name="pwd">
+    </div>
+    <button type="submit">sign up</button>
+  </form>
+</body>
+</html>
