--- a/src/indexpage.html
+++ b/src/indexpage.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Main Page</title>
-  <link href="index.css" rel="stylesheet">
+  <link href="indexpage.css" rel="stylesheet">
 </head>
 <body>
     <header></header>
