--- a/src/login.html
+++ b/src/login.html
@@ -11,11 +11,11 @@
   <form action="/login" method="post" id="form">
     <div calss="form_layout">
     	<p>id</p>
-    	<input type="text" name="id">
+    	<input type="text" name="id" required>
     </div>
     <div calss="form_layout">
     	<p>password</p>
-    	<input type="password" name="pwd">
+    	<input type="password" name="pwd" required>
     </div>
     <button type="submit">LOGIN</button>
   </form>
