--- a/src/signup.html
+++ b/src/signup.html
@@ -9,11 +9,11 @@
   <form action="/signup" method="post" id="form">
     <div>
       <p>setting your id</p>
-      <input type="text" name="id">
+      <input type="text" name="id" required>
     </div>
     <div>
       <p>setting your password</p>
-      <input type="password" name="pwd">
+      <input type="password" name="pwd" required> 
     </div>
     <button type="submit">sign up</button>
   </form>
