--- a/src/login.html
+++ b/src/login.html
@@ -19,6 +19,7 @@
     	<input type="password" name="pwd" required>
     </div>
     <button type="submit">LOGIN</button>
+    <button type="submit">SIGN UP</button>
   </form>
 </body>
 </html>
