--- a/src/login.html
+++ b/src/login.html
@@ -10,17 +10,17 @@
 <body>
   <h1>Login</h1>
   <form action="/login" method="post" id="form">
-    <label calss="form_layout">
-    	id
+    <div calss="form_layout">
+    	<a>id</a>
     	<input type="text" name="id" required>
-    </label>
-    <label calss="form_layout">
-    	password
+    </div>
+    <div calss="form_layout">
+    	<a>password</a>
     	<input type="password" name="pwd" required>
-    </label>
+    </div>
     <div>
       <button type="submit">LOGIN</button>
-      <butto onclick="location.href='/signup' ">SIGN UP</button>
+      <button onclick="location.href='/signup' ">SIGN UP</button>
     </div>
     </form>
 </body>
