--- a/src/login.html
+++ b/src/login.html
@@ -8,13 +8,13 @@
   <title>Main Page</title>
 </head>
 <body>
-  <h1>Login</h1>
   <form action="/login" method="post" id="form">
-    <div calss="form_layout">
+    <h1>Login</h1>
+    <div class="form_layout">
     	<a>id</a>
     	<input type="text" name="id" required>
     </div>
-    <div calss="form_layout">
+    <div class="form_layout">
     	<a>password</a>
     	<input type="password" name="pwd" required>
     </div>
