--- a/src/login.html
+++ b/src/login.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset=UTF-8>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="login.css" rel="stylesheet">
+  <!--<link href="login.css" rel="stylesheet">-->
   <title>Main Page</title>
 </head>
 <body>
